

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    	android:id="@+id/scrollview"
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"
   			android:isScrollContainer="true"
    		android:orientation="vertical"
    		android:background="#3498db">
<RelativeLayout 
	    android:id="@+id/LinerLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:isScrollContainer="true"
	    android:orientation="vertical"
	    tools:context=".MainActivity"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	     android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin">
	    
	  <!--  
	    
	    
	    
	      	
	     -->

	    
    
		    	<LinearLayout    android:id="@+id/LinearLayout2"
		    			android:layout_width="match_parent"
		  				android:layout_height="wrap_content"
		  				android:isScrollContainer="true"
		  				android:orientation="vertical"
		  				android:background="@drawable/layout_bg"
		  				android:padding="10dp"
		  				
		  				
		  				>
		    
		            
		  			  <EditText
		   					android:id="@+id/Inputtext"
		        			android:layout_width="match_parent"
		        			android:layout_height="wrap_content"
		        			android:layout_marginTop="20dp"
		      				android:layout_marginBottom="30dp"
		        			android:ems="10"
		        			android:hint="@string/input_text" >
		        			<requestFocus />
		    			</EditText>
						 <RelativeLayout android:id="@+id/buttonclass"
						    android:paddingRight="3dip"
						    android:paddingBottom="3dip"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:background="@drawable/button_bg_3d"
						    android:layout_marginBottom="10dp">
					    <Button
					        android:id="@+id/button1"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					       
					        android:onClick="encrypt"
					        android:text="@string/encode" 
					        android:background="@drawable/button_class"
					        android:textColor="#FFFFFF"/>
					    </RelativeLayout>
				</LinearLayout>
				      <View
					            android:id="@+id/ViewDivider"
					            android:layout_width="fill_parent"
					            android:layout_height="20dp"
					            android:background="@drawable/drop_shadow" 
					            android:layout_below="@id/LinearLayout2"
					            />
				       <RelativeLayout
					         android:id="@+id/button_class2"
					         android:layout_height="50dp"
					         android:layout_width="100dp"
					         android:background="@drawable/button_bg_3d_r"
					         android:layout_below="@+id/ViewDivider"
					         android:paddingRight="3dip"
						    android:paddingBottom="3dip"
						    android:layout_centerHorizontal="true">
					     <Button
					         android:id="@+id/swapButton"
					         android:layout_width="match_parent"
					         android:layout_height="match_parent"
					         android:text="@string/Swap"
					         android:background="@drawable/button_class_r"
					         
					          
					         android:onClick="swaptext"/>
					     </RelativeLayout>
					     <View android:id="@+id/ViewDivider3"
					            android:layout_width="100dp"
					            android:layout_height="20dp"
					            android:background="@drawable/drop_shadow" 
					            android:layout_below="@id/button_class2"
					            android:layout_centerHorizontal="true"/>

				      

					    <LinearLayout
					        android:layout_below="@id/ViewDivider3"
					        android:id="@+id/LinearLayout3"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:isScrollContainer="true"
					        android:orientation="vertical"
					        android:background="@drawable/layout_bg"
					        android:padding="10dp"
					         >

					  
						 <RelativeLayout android:id="@+id/buttonclass2"
						    android:paddingRight="3dip"
						    android:paddingBottom="3dip"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:background="@drawable/button_bg_3d"
						    android:layout_marginTop="10dp">
					        <Button
					            android:id="@+id/button2"
					            android:layout_width="match_parent"
					            android:layout_height="wrap_content"
					            
					            android:onClick="decrypt"
					            android:text="@string/decode"
					            android:background="@drawable/button_class"
					            android:textColor="#FFFFFF" />
					        </RelativeLayout>

					        <EditText
					            android:id="@+id/Outputtext"
					            android:layout_width="match_parent"
					            android:layout_height="wrap_content"
					            android:layout_marginTop="30dp"
					            android:layout_marginBottom="20dp"
					            android:ems="10"
					            android:hint="@string/output" />
					    </LinearLayout>
					     <View
					            android:id="@+id/ViewDivider2"
					            android:layout_width="fill_parent"
					            android:layout_height="20dp"
					            android:background="@drawable/drop_shadow" 
					            android:layout_below="@id/LinearLayout3"/>

					    
  
</RelativeLayout>
	</ScrollView>


